FIX | each replica has a memory limit; the image alone owns the JVM flags
At 2,000 VUs the Docker VM's kernel OOM-killed app replicas mid-sale:
with no container limit, MaxRAMPercentage sized every heap against the
whole VM. compose.yaml also replaced the image's JAVA_TOOL_OPTIONS,
dropping ExitOnOutOfMemoryError (and ZGC, which therefore never ran);
and a 1.5 GiB limit alone makes ergonomics pick SerialGC.

mem_limit ${APP_MEM_LIMIT:-1536m}; Dockerfile: MaxRAMPercentage=70,
UseG1GC explicit, ExitOnOutOfMemoryError. Same load: zero restarts.

ADR-062.

Co-Authored-By: Claude Opus 5.5 (1M context) <noreply@anthropic.com>